# mtgos-3ds9

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  config.cmake  config.h  config.py  do_all.sh  fontgen.py  readme
boot/: README
boot/3ds/: CMakeLists.txt  main.c
buildtools/: grub-iso.sh  mkfirm.py  mmapcomp.py  sighax-firm.sh
cross/: Makefile  binutils.mk  cloog.mk  gawk.mk  gcc.mk  gmp.mk  isl.mk  mpc.mk  mpfr.mk
docs/: layout.md  mmap.md  syscalls.md
iso/grub2/: grub.cfg
kernel/: CMakeLists.txt
kernel/arch/arm/: cache.s  config.py  flags.cmake  int.s  interrupt.cpp  sourcegen.py
kernel/arch/arm/3ds11/: config.py  flags.cmake  layout.ld  start.cpp  start.s
kernel/arch/arm/3ds9/: config.py  flags.cmake  layout.ld  start.cpp  start.s
kernel/arch/arm/include/: cache.h  regs.h
kernel/arch/arm/raspi2/: config.py  flags.cmake  layout.ld  start.cpp  start.s
kernel/arch/x86/: config.py  flags.cmake  interrupt.cpp  sourcegen.py
kernel/arch/x86/pc/: config.py  flags.cmake  layout.ld  start.c  start.cpp  start.s
kernel/arch/x86/pc/include/: multiboot.h
kernel/arch/x86_64/: config.py  flags.cmake  interrupt.cpp  sourcegen.py
kernel/arch/x86_64/pc/: config.py  flags.cmake  layout.ld  start.cpp  start.s
kernel/hw/3ds11/: config.py
kernel/hw/3ds11/i2c/: i2c.cpp  i2c.hpp
kernel/hw/3ds11/mcu/: mcu.cpp  mcu.hpp
kernel/hw/3ds11/picafb/: picafb.cpp  picafb.hpp
kernel/hw/3ds11/vectorinit/: vectorinit.cpp  vectorinit.hpp
kernel/hw/3ds9/: config.py
kernel/hw/3ds9/picafb/: picafb.cpp  picafb.hpp
kernel/hw/3ds9/vectorinit/: vectorinit.cpp  vectorinit.hpp
kernel/hw/framebuffer/: framebuffer.cpp  framebuffer.hpp
kernel/hw/pc/: config.py  io.hpp
kernel/hw/pc/8259/: pic.cpp  pic.hpp
kernel/hw/pc/cgaterm/: cgaterm.cpp  cgaterm.hpp  cp437.cpp  cp437.hpp
kernel/hw/pc/idt/: idt.cpp  idt.hpp
kernel/hw/pc/pmm/: pmm.cpp  pmm.hpp
kernel/hw/pc/vesafb/: vesafb.cpp  vesafb.hpp
kernel/hw/pmm/: pmm.cpp  pmm.hpp
kernel/hw/raspi2/: config.py
kernel/hw/raspi2/serial/: serial.cpp  serial.hpp
kernel/hw/raspi2/uart/: uart.cpp  uart.hpp
kernel/hw/raspi2/vector/: vector.cpp  vector.hpp
kernel/mmaps/: 3ds11.mc  3ds9.mc  3ds9.mh  3ds9.mmap  raspi2.mc
kernel/src/: cppstubs.cpp  heap.cpp  irq.cpp  main.cpp  object_init.cpp  pmm.cpp  pmm.cpp.old  pxi.cpp  tty.cpp
kernel/src/include/: base.hpp  function.hpp  genfont.h  irq.hpp  kobject.hpp  pmm.hpp  pxi.hpp  tty.hpp
toolchains/: arm-none-eabi.cmake  i686-elf.cmake  x86_64-elf.cmake
